--- a/app/src/main/res/layout/fragment_create_profile.xml
+++ b/app/src/main/res/layout/fragment_create_profile.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+        android:padding="@dimen/edit_text_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +15,7 @@
             android:id="@+id/email_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/edit_text_margin"
             android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_marginRight="@dimen/edit_text_margin"
             android:autofillHints="emailAddress"
             android:drawableStart="@drawable/email_ic"
             android:hint="@string/email"
@@ -28,9 +27,7 @@
             android:id="@+id/password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/edit_text_margin"
             android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_marginRight="@dimen/edit_text_margin"
             android:autofillHints="password"
             android:drawableStart="@drawable/password_ic"
             android:hint="@string/password"
@@ -46,36 +43,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/edit_text_margin"
             android:text="@string/term_checkbox"
-            android:layout_gravity="start"
-            android:layout_marginStart="@dimen/edit_text_margin"/>
+            android:layout_gravity="start"/>
 
         <Button
             android:id="@+id/create_account_button"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/edit_text_margin"
             android:text="@string/create_account_button"
-            android:layout_gravity="start"
-            android:layout_marginStart="@dimen/edit_text_margin"/>
+            android:layout_gravity="start"/>
 
-        <View
-            android:id="@+id/divider_2"
+        <Button
+            android:id="@+id/go_to_login_button"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="@dimen/edit_text_margin"
-            android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_marginRight="@dimen/edit_text_margin"
-            android:background="@color/black"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/go_to_login_text"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/edit_text_margin"
             android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_marginRight="@dimen/edit_text_margin"
-            android:text="@string/already_have_account"
+            android:text="@string/login"
             android:textSize="20sp"
             android:layout_gravity="start"/>
 
