--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,13 +32,27 @@
             android:id="@+id/nav_create_account"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.create_account.CreateAccountFragment"
             android:label="@string/create_profile_nav"
-            tools:layout="@layout/fragment_create_profile" />
+            tools:layout="@layout/fragment_create_profile" >
+        <action
+                android:id="@+id/action_nav_create_account_to_nav_home"
+                app:destination="@id/nav_home" />
+        <action
+                android:id="@+id/action_nav_create_account_to_nav_login"
+                app:destination="@id/nav_login" />
+    </fragment>
 
     <fragment
             android:id="@+id/nav_login"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.login.LoginFragment"
             android:label="@string/login"
-            tools:layout="@layout/fragment_login" />
+            tools:layout="@layout/fragment_login" >
+        <action
+                android:id="@+id/action_nav_login_to_nav_home"
+                app:destination="@id/nav_home" />
+        <action
+                android:id="@+id/action_nav_login_to_nav_create_account"
+                app:destination="@id/nav_create_account" />
+    </fragment>
 
     <fragment
             android:id="@+id/nav_my_profile"
