--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -45,20 +45,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-            <Button
-                    android:id="@+id/submit_rating_button_movie"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:background="@drawable/send_ic"
-                    android:layout_marginStart="@dimen/edit_text_margin"/>
-
-
         <Button
                 android:id="@+id/movie_fav_button_id"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:background="@drawable/fav_border_ic"
-                android:layout_marginStart="10dp"/>
+                android:layout_marginStart="@dimen/edit_text_top_margin"/>
 
         </LinearLayout>
 
