--- a/app/src/main/res/layout/fragment_single_free_to_play_game.xml
+++ b/app/src/main/res/layout/fragment_single_free_to_play_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,7 +19,7 @@
                 android:text="@string/home_text"
                 android:textSize="35sp"
                 android:gravity="center"
-                android:paddingTop="@dimen/edit_text_margin"/>
+                android:paddingTop="@dimen/edit_text_margin" />
 
         <ImageView
                 android:id="@+id/single_free_to_play_poster"
@@ -31,13 +32,13 @@
         <RatingBar
                 android:id="@+id/free_game_rating_bar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/release_date"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/free_to_play_release_date"
@@ -50,21 +51,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/myapp_ratting"
                 android:textStyle="bold"
-                android:layout_marginTop="@dimen/edit_text_margin"/>
+                android:layout_marginTop="@dimen/edit_text_margin" />
 
         <TextView
                 android:id="@+id/free_to_play_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/home_text"
-                android:drawableStart="@drawable/my_rating_ic"/>
+                android:drawableStart="@drawable/my_rating_ic" />
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about_nav"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/free_to_play_short_description"
@@ -77,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/game_url"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/free_to_play_game_url"
@@ -85,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/home_text"
                 android:autoLink="web"
-                android:linksClickable="true"/>
+                android:linksClickable="true" />
 
         <TextView
                 android:layout_width="match_parent"
@@ -93,7 +94,7 @@
                 android:layout_marginTop="@dimen/edit_text_margin"
                 android:text="@string/screen_shots"
                 android:textSize="25sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/free_to_play_screen_shots_rv"
@@ -107,7 +108,7 @@
                 android:text="@string/description"
                 android:textSize="25sp"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/free_to_play_description"
@@ -126,14 +127,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/status"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/game_genre"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -169,14 +170,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/platform"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/publisher"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -207,7 +208,7 @@
                 android:text="@string/minimum_system_requirements"
                 android:layout_marginTop="@dimen/edit_text_margin"
                 android:textSize="25sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -219,7 +220,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/os"
                     android:layout_marginTop="@dimen/edit_text_margin"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:id="@+id/free_to_play_os"
@@ -232,7 +233,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/processor"
                     android:layout_marginTop="@dimen/edit_text_margin"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:id="@+id/free_to_play_processor"
@@ -245,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/graphics"
                     android:layout_marginTop="@dimen/edit_text_margin"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:id="@+id/free_to_play_graphics"
@@ -258,7 +259,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/memory"
                     android:layout_marginTop="@dimen/edit_text_margin"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:id="@+id/free_to_play_memory"
@@ -271,16 +272,56 @@
                     android:layout_height="wrap_content"
                     android:text="@string/storage"
                     android:layout_marginTop="@dimen/edit_text_margin"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             <TextView
                     android:id="@+id/free_to_play_storage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/home_text"
-                    android:layout_marginBottom="@dimen/edit_text_margin"/>
+                    android:layout_marginBottom="@dimen/edit_text_margin" />
 
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/edit_text_margin">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/free_game_coming_rv_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@+id/free_game_coming_rv_id">
+
+                <EditText
+                        android:id="@+id/free_game_comment_field"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"
+                        android:importantForAutofill="yes"
+                        android:hint="@string/comment"
+                        android:minHeight="48dp" />
+
+                <Button
+                        android:id="@+id/free_game_post_comment_button"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/send_ic" />
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
