--- a/app/src/main/res/layout/fragment_single_game.xml
+++ b/app/src/main/res/layout/fragment_single_game.xml
@@ -264,6 +264,46 @@
 
         </LinearLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/edit_text_margin">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/game_coming_rv_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@+id/game_coming_rv_id">
+
+                <EditText
+                        android:id="@+id/game_comment_field"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"
+                        android:importantForAutofill="yes"
+                        android:hint="@string/comment"
+                        android:minHeight="48dp" />
+
+                <Button
+                        android:id="@+id/game_post_comment_button"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/send_ic"/>
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </ScrollView>
